--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ rand="0.7.0"
 crc = "^1.0.0"
 specs = "0.14.0"
 specs-derive = "0.4.0"
-headless_chrome = "0.9.0"
 failure = "0.1"
+futures = "0.1"
